--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "heyui": "^2.2.0-alpha.1",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
+    "vue-easy-lightbox": "^1.19.0",
     "vue-lazyload": "^3.0.0",
     "vue-router": "^4.3.2"
   },
@@ -21,6 +23,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.11.1",
+    "less": "^4.2.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
