--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "heyui": "^2.2.0-alpha.1",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-easy-lightbox": "^1.19.0",
     "vue-lazyload": "^3.0.0",
+    "vue-masonry": "^0.16.0",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
